# GloVeGame

./: .gitignore  README.md
src/: .dockerignore  Dockerfile  docker-compose.yml
src/api/: Dockerfile  main.py  pyproject.toml  test.py
src/api/embeddings/: glove.py
src/api/embeddings/models/: vector_samples.py
src/api/routers/: base.py  samples.py  vectors.py
src/api/server/: database.py  models.py
src/frontend/: Dockerfile  package-lock.json  package.json
src/frontend/src/: App.vue  http-common.ts
src/frontend/src/components/: Menu.vue
src/frontend/src/plugins/: vuetify.ts
src/frontend/src/router/: index.ts
src/frontend/src/services/: dataService.ts  testService.ts  todoService.ts
src/frontend/src/types/: Test.ts
src/frontend/src/views/: About.vue  Analogy.vue  Closest.vue  MainMenu.vue
