[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Mateusz Więckowski <mr.mateuszwieckowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.5"
pymongo = "^3.11.4"
numpy = "^1.21.0"
torchtext = "^0.10.0"
motor = "^2.4.0"
uvicorn = "^0.14.0"
fastapi = "^0.65.2"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]
fastapi = "^0.65.2"
uvicorn = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
